feat: 新增刪除使用者、新增送出訊息的controller
