# app/controller/v1/user/User_Login.go
@@ -22,14 +22,15 @@ import (
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param login body accountModel.Userlogin true "登入資料（Email & Password）"
+// @Param login body accountModel.User true "登入資料（Email & Password）"
 // @Success 200 {object} accountModel.UserRequest "登入成功，返回 JWT Token 和成功訊息"
 // @Failure 400 {object} model.ErrorRequest "無效的輸入資料"
-// @Failure 401 {object} model.ErrorRequest "使用者不存在或密碼錯誤"
+// @Failure 401 {object} model.ErrorRequest "密碼錯誤"
+// @Failure 404 {object} model.ErrorRequest "使用者不存在"
 // @Failure 500 {object} model.ErrorRequest "系統錯誤或 JWT 簽發失敗"
 // @Router /api/v1/login [post]
 func (u *UserController) UserLogin(ctx *gin.Context) {
-	var loginData accountModel.Userlogin
+	var loginData accountModel.User
 
 	// 綁定 JSON 資料並驗證輸入格式
 	// 使用 ShouldBindJSON 可以自動驗證 JSON 格式是否符合結構體定義
