# app/models/model/model.go
@@ -3,3 +3,7 @@ package model
 type ErrorRequest struct {
 	Error string `json:"error" example:"error"`
 }
+
+type RequestMessage struct {
+	Message string `json"message" example:"message"`
+}
