# routers/api/v1/v1.go
@@ -8,8 +8,15 @@ import (
 
 func V1Routes(rg *gin.RouterGroup) {
 
+	// 處理登入請求
 	rg.POST("/login", v1.User().UserLogin)
 	/// 處理註冊請求
 	rg.POST("/register", v1.User().UserRegister)
+
+	/// 刪除使用者
+	rg.POST("/deleteUser", v1.User().UserDelete)
+
+	//處理送通知
+	rg.POST("/sendmessage", v1.Message().SendMessage)
 
 }
